--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         "closedDateColumn": "Closed Date",
         "startDateFormat": "%m/%d/%Y %I:%M:%S %p",
         "closedDateFormat": "",
-        "estimationColumn": "",
+        "estimationColumn": "Story Points",
         "chartsFolder": "Charts",
         "showPlots": false
     },
@@ -45,6 +45,7 @@
     "estimationVsCycleTime": {
         "generate": false,
         "history": 90,
-        "chartName": "EstimationVsCycleTime.png"
+        "chartName": "EstimationVsCycleTime.png",
+        "estimationUnit": "Story Points"
     }
 }
