--- a/config.json
+++ b/config.json
@@ -7,44 +7,45 @@
         "startDateFormat": "%m/%d/%Y %I:%M:%S %p",
         "closedDateFormat": "",
         "estimationColumn": "Story Points",
+        "itemTitleColumn": "ID",
         "chartsFolder": "Charts",
         "showPlots": false
     },
     "cycleTimeScatterPlot": {
         "generate": true,
-        "history": 30,
+        "history": 180,
         "chartName": "CycleTime.png",
         "percentiles": [50, 70, 85, 95],
         "percentileColors": ["red", "orange", "lightgreen", "darkgreen"]
     },
     "workItemAgeScatterPlot": {
         "generate": true,
-        "history": 30,
+        "history": 180,
         "chartName": "WorkItemAge.png",
         "xAxisLines": [5, 10],
         "xAxisLineColors": ["orange", "red"]
     },
     "throughputRunChart": {
         "generate": true,
-        "history": 90,
+        "history": 180,
         "unit": "days",
         "chartName": "Throughput.png"
     },
     "workInProcessRunChart": {
         "generate": true,
-        "history": 30,
+        "history": 180,
         "chartName": "WorkInProcess.png"
     },
     "startedVsFinishedChart": {
         "generate": true,
-        "history": 90,
+        "history": 180,
         "chartName": "StartedVsFinished.png",
         "startedColor": "orange",
         "closedColor": "green"
     },
     "estimationVsCycleTime": {
         "generate": false,
-        "history": 90,
+        "history": 180,
         "chartName": "EstimationVsCycleTime.png",
         "estimationUnit": "Story Points"
     }
