Try to not overlap item titles
- Use adjustText lib to align text
- Show item title in WIA Scatterplot
- Show item title in estimation vs. Cycle Time scatterplot

--- a/config.json
+++ b/config.json
@@ -44,7 +44,7 @@
         "closedColor": "green"
     },
     "estimationVsCycleTime": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "EstimationVsCycleTime.png",
         "estimationUnit": "Story Points"
