--- a/config.json
+++ b/config.json
@@ -12,41 +12,51 @@
         "showPlots": false
     },
     "cycleTimeScatterPlot": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "chartName": "CycleTime.png",
         "percentiles": [50, 70, 85, 95],
         "percentileColors": ["red", "orange", "lightgreen", "darkgreen"]
     },
     "workItemAgeScatterPlot": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "chartName": "WorkItemAge.png",
         "xAxisLines": [5, 10],
         "xAxisLineColors": ["orange", "red"]
     },
     "throughputRunChart": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "unit": "days",
         "chartName": "Throughput.png"
     },
     "workInProcessRunChart": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "chartName": "WorkInProcess.png"
     },
     "startedVsFinishedChart": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "chartName": "StartedVsFinished.png",
         "startedColor": "orange",
         "closedColor": "green"
     },
     "estimationVsCycleTime": {
-        "generate": true,
+        "generate": false,
         "history": 180,
         "chartName": "EstimationVsCycleTime.png",
         "estimationUnit": "Story Points"
+    },
+    "processBehaviourCharts": {
+        "generate": true,
+        "baselineStart": "2024-01-01",
+        "baselineEnd": "2024-01-31",
+        "history": 60,
+        "throughputChartName": "Throughput_PBC.png",
+        "cycleTimeChartName": "CycleTime_PBC.png",
+        "wipChartName": "WorkInProgress_PBC.png",
+        "itemAgeChartName": "WorkItemAge_PBC.png"
     }
 }
