--- a/config.json
+++ b/config.json
@@ -12,39 +12,39 @@
         "showPlots": false
     },
     "cycleTimeScatterPlot": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "CycleTime.png",
         "percentiles": [50, 70, 85, 95],
         "percentileColors": ["red", "orange", "lightgreen", "darkgreen"]
     },
     "workItemAgeScatterPlot": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "WorkItemAge.png",
         "xAxisLines": [5, 10],
         "xAxisLineColors": ["orange", "red"]
     },
     "throughputRunChart": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "unit": "days",
         "chartName": "Throughput.png"
     },
     "workInProcessRunChart": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "WorkInProcess.png"
     },
     "startedVsFinishedChart": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "StartedVsFinished.png",
         "startedColor": "orange",
         "closedColor": "green"
     },
     "estimationVsCycleTime": {
-        "generate": false,
+        "generate": true,
         "history": 180,
         "chartName": "EstimationVsCycleTime.png",
         "estimationUnit": "Story Points"
