--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install wheel twine setuptools
+          python -m pip install -r requirements.txt
 
       - name: Build and publish to TestPyPi
         run: |
@@ -53,7 +53,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install wheel twine setuptools
+          python -m pip install -r requirements.txt
 
       - name: Build and publish to PyPi
         run: |
