Add option to visualize cycle time trend

--- a/FlowMetricsCSV/ExampleConfig.json
+++ b/FlowMetricsCSV/ExampleConfig.json
@@ -13,10 +13,11 @@
     },
     "cycleTimeScatterPlot": {
         "generate": true,
-        "history": 30,
+        "history": 90,
         "chartName": "CycleTime.png",
         "percentiles": [50, 70, 85, 95],
-        "percentileColors": ["red", "orange", "lightgreen", "darkgreen"]
+        "percentileColors": ["red", "orange", "lightgreen", "darkgreen"],
+        "trend_settings":  [70, 10, "purple"]
     },
     "workItemAgeScatterPlot": {
         "generate": true,
