Add parameter to override today with other dates

--- a/FlowMetricsCSV/ExampleConfig.json
+++ b/FlowMetricsCSV/ExampleConfig.json
@@ -9,7 +9,8 @@
         "estimationColumn": "Story Points",
         "itemTitleColumn": "ID",
         "chartsFolder": "Charts",
-        "showPlots": false
+        "showPlots": false,
+        "today": null
     },
     "cycleTimeScatterPlot": {
         "generate": true,
